k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-file-service
  namespace: cloud-file-service
spec:
  selector:
    app: cloud-file-service

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: ClusterIP
